# planner_nav_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: navigation.launch.py  spawn_robot.launch.py  world.launch.py
maps/: my_map.pgm  my_map.yaml
pddl/: domain.pddl  problem1.pddl
urdf/: materials.xacro  mogi_bot.gazebo  mogi_bot.urdf  planner_nav_robot.gazebo  planner_nav_robot.urdf
worlds/: simple_world.sdf
